fix: decorative element add dark mode

--- a/src/reset.css
+++ b/src/reset.css
@@ -134,12 +134,33 @@
     background: linear-gradient(90deg, #115ef5 0%, #538bf9 100%);
   }
 
-  .decorative-border-image--down {
-    border-image: linear-gradient(#ffffff 40%, rgb(217, 217, 217)) 1;
+  .decorative-border-linear-down--light {
+    border-image: linear-gradient(#fff 40%, rgb(217, 217, 217)) 1;
   }
-  .decorative-border-image--up {
-    border-image: linear-gradient(rgb(217, 217, 217), #ffffff) 1;
+  .decorative-border-linear-down--dark {
+    border-image: linear-gradient(#000 40%, rgb(38, 38, 38)) 1;
   }
+  .decorative-border-linear-down {
+    @apply dark:decorative-border-linear-down--dark decorative-border-linear-down--light;
+  }
+
+  .decorative-border-linear-up--light {
+    border-image: linear-gradient(rgb(217, 217, 217), #fff) 1;
+  }
+  .decorative-border-linear-up--dark {
+    border-image: linear-gradient(rgb(38, 38, 38), #000) 1;
+  }
+  .decorative-border-linear-up {
+    @apply dark:decorative-border-linear-up--dark decorative-border-linear-up--light;
+  }
+
+  .decorative-border-linear-middle--light {
+    border-image: linear-gradient(to right, #fff, rgb(217, 217, 217), #fff) 1;
+  }
+  .decorative-border-linear-middle--dark {
+    border-image: linear-gradient(to right, #000, rgb(38, 38, 38), #000) 1;
+  }
+
   .decorative-border-shadow--first {
     background: linear-gradient(
       315deg,
@@ -157,25 +178,19 @@
 
   .decorative-border {
     @apply relative mb-20 lg:border-b-2;
-    border-image: linear-gradient(
-        to right,
-        #ffffff,
-        rgb(217, 217, 217),
-        #ffffff
-      )
-      1;
+    @apply dark:decorative-border-linear-middle--dark decorative-border-linear-middle--light;
   }
   .decorative-border-item--lg {
-    @apply relative border-r-2 last:border-r-0 decorative-border-image--down;
+    @apply relative border-r-2 last:border-r-0 decorative-border-linear-down;
     @apply lg:last:after:decorative-border-shadow--last;
     @apply after:absolute after:contents after:left-0 after:-right-[2px] lg:after:h-20;
-    @apply last:after:border-r-0 after:border-r-2 after:decorative-border-image--up;
+    @apply last:after:border-r-0 after:border-r-2 after:decorative-border-linear-up;
   }
   .decorative-border-item--md {
     @apply relative;
     @apply first:decorative-border-shadow--first;
-    @apply first:border-r-2 first:border-b-2 lg:first:border-b-0 first:decorative-border-image--down;
-    @apply first:after:absolute after:top-full md:first:after:left-full lg:first:after:left-[2px] first:after:w-full first:after:border-b-2 lg:first:after:border-b-0 md:first:after:decorative-border-image--down lg:first:after:decorative-border-image--up;
-    @apply lg:first:before:hidden first:before:absolute first:before:top-full first:before:left-full first:before:h-full first:before:border-r-2 first:before:decorative-border-image--up;
+    @apply first:border-r-2 first:border-b-2 lg:first:border-b-0 first:decorative-border-linear-down;
+    @apply first:after:absolute after:top-full md:first:after:left-full lg:first:after:left-[2px] first:after:w-full first:after:border-b-2 lg:first:after:border-b-0 md:first:after:decorative-border-linear-down lg:first:after:decorative-border-linear-up;
+    @apply lg:first:before:hidden first:before:absolute first:before:top-full first:before:left-full first:before:h-full first:before:border-r-2 first:before:decorative-border-linear-up;
   }
 }
